# sfm

./: CMakeLists.txt  LICENSE  README.md
cmake/: 3rdparty.cmake  glad.cmake  imgui.cmake
res/shaders/: raycast.frag  raycast.vert  tsdf.glsl
src/: CMakeLists.txt  app.cpp  app.hpp  camera.cpp  camera.hpp  main.cpp  shader.cpp  shader.hpp  volume.cpp  volume.hpp
